--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "prettier --write src"
   },
   "dependencies": {
+    "framer-motion": "^10.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
